# string_cast

./: LICENSE  README.md  meson.build
include/string_cast/: string_cast.h
source/: string_cast.cpp
test/: test.cpp
testing/: test_suite.cpp
